[package]
name = "tbltyp"
description = "Table string typewriter."
license = "MIT"
version = "0.1.1"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/tbltyp"
homepage = "https://github.com/xpepermint/tbltyp"
repository = "https://github.com/xpepermint/tbltyp"

[dependencies]
ansistr = "0.1.1"
